--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,8 +11,8 @@
       "request": "launch",
       "program": "${workspaceFolder}/build/test/manifold_test",
       "args": [
-        "--gtest_break_on_failure",
         "--gtest_catch_exceptions=0",
+        "--gtest_filter=Properties.Tolerance"
       ],
       "stopAtEntry": false,
       "cwd": "${workspaceFolder}/build/test",
