removed MANIFOLD_EXCEPTIONS

--- a/.github/workflows/manifold.yml
+++ b/.github/workflows/manifold.yml
@@ -108,9 +108,6 @@ jobs:
   build_wasm:
     timeout-minutes: 30
     runs-on: ubuntu-22.04
-    strategy:
-      matrix:
-        exception: [ON, OFF]
     steps:
     - name: Install dependencies
       run: |
@@ -130,7 +127,7 @@ jobs:
         source ./emsdk/emsdk_env.sh
         mkdir build
         cd build
-        emcmake cmake -DCMAKE_BUILD_TYPE=Release -DMANIFOLD_EXCEPTIONS=${{matrix.exception}} .. && emmake make
+        emcmake cmake -DCMAKE_BUILD_TYPE=Release .. && emmake make
     - name: Test WASM
       run: |
         cd build/test
@@ -144,7 +141,7 @@ jobs:
         cp ../manifold.* ./dist/
     - name: Upload WASM files
       uses: actions/upload-artifact@v4
-      if: matrix.exception == 'ON' && github.event_name == 'push'
+      if: github.event_name == 'push'
       with:
         name: wasm
         path: bindings/wasm/examples/dist/
