--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -105,12 +105,7 @@ target_include_directories(
   PRIVATE ${MANIFOLD_INCLUDE_DIRS}
 )
 
-set(
-  OPTIONS
-  MANIFOLD_DEBUG
-  MANIFOLD_CROSS_SECTION
-  MANIFOLD_EXPORT
-)
+set(OPTIONS MANIFOLD_DEBUG MANIFOLD_CROSS_SECTION MANIFOLD_EXPORT)
 foreach(OPT IN LISTS OPTIONS)
   if(${${OPT}})
     target_compile_options(manifold PUBLIC -D${OPT})
