--- a/.github/workflows/manifold.yml
+++ b/.github/workflows/manifold.yml
@@ -237,18 +237,11 @@ jobs:
     timeout-minutes: 30
     strategy:
       matrix:
-        variant: [none, tbb, js, js-tbb]
+        variant: [manifold-none, manifold-tbb, manifold-js, manifold-js-tbb, manifold3d]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
     - uses: DeterminateSystems/nix-installer-action@main
     - uses: DeterminateSystems/magic-nix-cache-action@main
-    - run: nix build -L '.?submodules=1#manifold-${{matrix.variant}}'
+    - run: nix build -L '.?submodules=1#${{matrix.variant}}'
 
-  build_nix_python:
-    timeout-minutes: 30
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-    - uses: DeterminateSystems/nix-installer-action@main
-    - run: nix build -L '.?submodules=1#manifold3d'
