--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -55,7 +55,6 @@ set(
 set(
   MANIFOLD_INCLUDE_DIRS
   ${PROJECT_SOURCE_DIR}/include
-  $<$<BOOL:${TBB_INCLUDE_DIRS}>:${TBB_INCLUDE_DIRS}>
 )
 
 add_library(manifold ${MANIFOLD_SRCS} ${MANIFOLD_PRIVATE_HDRS})
@@ -64,8 +63,8 @@ target_link_libraries(
   manifold
   PUBLIC
     # optional dependencies
-    $<$<BOOL:${MANIFOLD_CROSS_SECTION}>:$<IF:$<TARGET_EXISTS:Clipper2::Clipper2>,Clipper2::Clipper2,Clipper2>>
-    $<$<BOOL:${MANIFOLD_PAR}>:$<IF:$<TARGET_EXISTS:TBB::tbb>,TBB::tbb,${TBB_LINK_LIBRARIES}>>
+    $<$<BOOL:${MANIFOLD_CROSS_SECTION}>:Clipper2::Clipper2>
+    $<$<BOOL:${MANIFOLD_PAR}>:TBB::tbb>
     $<$<BOOL:${MANIFOLD_EXPORT}>:assimp::assimp>
     $<$<BOOL:${TRACY_ENABLE}>:TracyClient>
 )
