--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -38,6 +38,7 @@ set(
 add_executable(manifold_test ${SOURCE_FILES})
 target_link_libraries(
   manifold_test
+  PRIVATE
   GTest::gtest_main
   manifold
   samples
