--- a/extras/CMakeLists.txt
+++ b/extras/CMakeLists.txt
@@ -22,8 +22,13 @@ target_compile_options(perfTest PRIVATE ${MANIFOLD_FLAGS})
 
 if(MANIFOLD_PAR AND NOT MSVC)
   add_executable(stlTest stl_test.cpp)
-  target_link_libraries(stlTest manifold)
+  target_link_libraries(stlTest PRIVATE manifold)
   target_compile_options(stlTest PRIVATE ${MANIFOLD_FLAGS})
+  if(MANIFOLD_BUILTIN_TBB)
+    target_link_libraries(stlTest PRIVATE TBB::tbb)
+  else()
+    target_link_libraries(stlTest PUBLIC TBB::tbb)
+  endif()
 endif()
 
 add_executable(largeSceneTest large_scene_test.cpp)
