--- a/cmake/manifold.pc.in
+++ b/cmake/manifold.pc.in
@@ -9,4 +9,4 @@ Version: @MANIFOLD_VERSION@
 URL: https://github.com/elalish/manifold
 Requires-private: tbb @TEMPLATE_OPTIONAL_CLIPPER@
 Libs: -L${libdir} -lmanifold@PCFILE_LIB_SUFFIX@
-Cflags: -I${includedir}
+Cflags: -I${includedir} -std=c++17
