--- a/cmake/manifold.pc.in
+++ b/cmake/manifold.pc.in
@@ -8,5 +8,5 @@ Description: Geometry library for topological robustness
 Version: @MANIFOLD_VERSION@
 URL: https://github.com/elalish/manifold
 Requires-private: tbb @TEMPLATE_OPTIONAL_CLIPPER@
-Libs: -L${libdir} -lmanifold@PCFILE_LIB_SUFFIX@
+Libs: -L${libdir} -lmanifold@PCFILE_LIB_SUFFIX@ -Wl,-rpath,${libdir}
 Cflags: -I${includedir} -std=c++17
