forgot to set rpath...

--- a/.github/workflows/manifold.yml
+++ b/.github/workflows/manifold.yml
@@ -232,7 +232,7 @@ jobs:
         sudo cmake --install .
         cd ..
         ./scripts/test-cmake.sh
-        ./scripts/test-pkgconfig.sh
+        LDFLAGS=-Wl,-rpath,/usr/local/lib ./scripts/test-pkgconfig.sh
 
   build_mac_builtin_tbb:
     timeout-minutes: 30
