--- a/cmake/manifoldConfig.cmake.in
+++ b/cmake/manifoldConfig.cmake.in
@@ -12,14 +12,14 @@ if(_FIND_ROOT STREQUAL "/")
 endif()
 
 set(MANIFOLD_CROSS_SECTION "@MANIFOLD_CROSS_SECTION@")
-set(MANIFOLD_BUILTIN_CLIPPER2 "@MANIFOLD_BUILTIN_CLIPPER2@")
-if(MANIFOLD_CROSS_SECTION AND NOT MANIFOLD_BUILTIN_CLIPPER2)
+set(MANIFOLD_USE_BUILTIN_CLIPPER2 "@MANIFOLD_USE_BUILTIN_CLIPPER2@")
+if(MANIFOLD_CROSS_SECTION AND NOT MANIFOLD_USE_BUILTIN_CLIPPER2)
   set(Clipper2_ROOT "${_FIND_ROOT}")
   find_package(Clipper2 REQUIRED)
 endif()
 set(MANIFOLD_PAR "@MANIFOLD_PAR@")
-set(MANIFOLD_BUILTIN_TBB "@MANIFOLD_BUILTIN_TBB@")
-if(MANIFOLD_PAR STREQUAL "ON" AND NOT MANIFOLD_BUILTIN_TBB)
+set(MANIFOLD_USE_BUILTIN_TBB "@MANIFOLD_USE_BUILTIN_TBB@")
+if(MANIFOLD_PAR STREQUAL "ON" AND NOT MANIFOLD_USE_BUILTIN_TBB)
   find_package(TBB REQUIRED)
 endif()
 set(MANIFOLD_EXPORT "@MANIFOLD_EXPORT@")
