--- a/extras/CMakeLists.txt
+++ b/extras/CMakeLists.txt
@@ -19,6 +19,7 @@ endif()
 add_executable(perfTest perf_test.cpp)
 target_link_libraries(perfTest manifold)
 target_compile_options(perfTest PRIVATE ${MANIFOLD_FLAGS})
+exportbin(perfTest)
 
 if(MANIFOLD_PAR AND NOT MSVC)
   add_executable(stlTest stl_test.cpp)
@@ -29,6 +30,7 @@ endif()
 add_executable(largeSceneTest large_scene_test.cpp)
 target_link_libraries(largeSceneTest manifold)
 target_compile_options(largeSceneTest PRIVATE ${MANIFOLD_FLAGS})
+exportbin(largeSceneTest)
 
 if(MANIFOLD_DEBUG)
   add_executable(minimizeTestcase minimize_testcase.cpp)
@@ -38,10 +40,12 @@ if(MANIFOLD_DEBUG)
     $<$<BOOL:${MANIFOLD_PAR}>:TBB::tbb>
   )
   target_compile_options(minimizeTestcase PRIVATE ${MANIFOLD_FLAGS})
+  exportbin(minimizeTestcase)
 endif()
 
 if(MANIFOLD_EXPORT)
   add_executable(convertFile convert_file.cpp)
   target_link_libraries(convertFile manifold manifold)
   target_compile_options(convertFile PRIVATE ${MANIFOLD_FLAGS})
+  exportbin(convertFile)
 endif()
