--- a/cmake/version.h.in
+++ b/cmake/version.h.in
@@ -16,4 +16,4 @@
 
 #define MANIFOLD_VERSION_MAJOR @MANIFOLD_VERSION_MAJOR@
 #define MANIFOLD_VERSION_MINOR @MANIFOLD_VERSION_MINOR@
-#define MANIFOLD_VERSION_PATH @MANIFOLD_VERSION_PATCH@
+#define MANIFOLD_VERSION_PATCH @MANIFOLD_VERSION_PATCH@
