--- a/bindings/c/CMakeLists.txt
+++ b/bindings/c/CMakeLists.txt
@@ -1,4 +1,17 @@
-# this is a shared library for FFI bindings
+# Copyright 2024 The Manifold Authors.
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+# https://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
 include_directories(
   ${CMAKE_CURRENT_SOURCE_DIR}
   ${CMAKE_CURRENT_SOURCE_DIR}/include
@@ -7,25 +20,13 @@ include_directories(
 
 add_library(
   manifoldc
-  SHARED
   manifoldc.cpp
   conv.cpp
   box.cpp
   cross.cpp
   rect.cpp
 )
-
-if(MSVC)
-  set_target_properties(manifoldc PROPERTIES WINDOWS_EXPORT_ALL_SYMBOLS ON)
-  set_target_properties(
-    manifoldc
-    PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
-  )
-  set_target_properties(
-    manifoldc
-    PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
-  )
-endif()
+exportlib(manifoldc)
 
 if(MANIFOLD_EXPORT)
   target_sources(manifoldc PRIVATE meshIOc.cpp)
@@ -38,10 +39,9 @@ target_include_directories(
   manifoldc
   PUBLIC
     $<INSTALL_INTERFACE:include>
-    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/bindings/c/include>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
 )
 target_compile_options(manifoldc PRIVATE ${MANIFOLD_FLAGS})
-target_compile_features(manifoldc PRIVATE cxx_std_17)
 
 install(TARGETS manifoldc EXPORT manifoldTargets)
 install(
