--- a/bindings/wasm/CMakeLists.txt
+++ b/bindings/wasm/CMakeLists.txt
@@ -12,15 +12,16 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-project(wasm)
-
 add_executable(manifoldjs bindings.cpp)
 
 set_source_files_properties(
   bindings.cpp
   PROPERTIES OBJECT_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/bindings.js
 )
-target_link_libraries(manifoldjs manifold)
+target_link_libraries(
+  manifoldjs
+  PRIVATE manifold $<$<BOOL:${MANIFOLD_PAR}>:TBB::tbb>
+)
 target_compile_options(manifoldjs PRIVATE ${MANIFOLD_FLAGS})
 target_link_options(
   manifoldjs
@@ -34,7 +35,6 @@ target_link_options(
     -sEXPORT_ES6=1
 )
 
-target_compile_features(manifoldjs PUBLIC cxx_std_17)
 set_target_properties(manifoldjs PROPERTIES OUTPUT_NAME "manifold")
 
 file(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/examples/built)
@@ -46,28 +46,18 @@ add_custom_target(
   DEPENDS manifoldjs ${CMAKE_CURRENT_SOURCE_DIR}/manifold*.d.ts
 )
 
-# copy WASM build back here for publishing to npm
 add_custom_command(
   TARGET js_deps
   POST_BUILD
+  # copy WASM build back here for publishing to npm
   COMMAND
     ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/manifold.*
     ${CMAKE_CURRENT_SOURCE_DIR}
-)
-
-# copy WASM build and TS declarations for Vite to package into ManifoldCAD.org
-add_custom_command(
-  TARGET js_deps
-  POST_BUILD
+  # copy WASM build and TS declarations for Vite to package into ManifoldCAD.org
   COMMAND
     ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/manifold*
     ${CMAKE_CURRENT_SOURCE_DIR}/examples/built/
-)
-
-# copy TS declarations to public so they can be accessed by our editor
-add_custom_command(
-  TARGET js_deps
-  POST_BUILD
+  # copy TS declarations to public so they can be accessed by our editor
   COMMAND
     ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/manifold*.d.ts
     ${CMAKE_CURRENT_SOURCE_DIR}/examples/public/
