--- a/extras/CMakeLists.txt
+++ b/extras/CMakeLists.txt
@@ -19,30 +19,33 @@ endif()
 add_executable(perfTest perf_test.cpp)
 target_link_libraries(perfTest manifold)
 target_compile_options(perfTest PRIVATE ${MANIFOLD_FLAGS})
-target_compile_features(perfTest PUBLIC cxx_std_17)
+exportbin(perfTest)
 
 if(MANIFOLD_PAR AND NOT MSVC)
   add_executable(stlTest stl_test.cpp)
-  target_link_libraries(stlTest manifold)
+  target_link_libraries(stlTest PRIVATE manifold TBB::tbb)
   target_compile_options(stlTest PRIVATE ${MANIFOLD_FLAGS})
-  target_compile_features(stlTest PUBLIC cxx_std_17)
 endif()
 
 add_executable(largeSceneTest large_scene_test.cpp)
 target_link_libraries(largeSceneTest manifold)
 target_compile_options(largeSceneTest PRIVATE ${MANIFOLD_FLAGS})
-target_compile_features(largeSceneTest PUBLIC cxx_std_17)
+exportbin(largeSceneTest)
 
 if(MANIFOLD_DEBUG)
   add_executable(minimizeTestcase minimize_testcase.cpp)
-  target_link_libraries(minimizeTestcase manifold)
+  target_link_libraries(
+    minimizeTestcase
+    manifold
+    $<$<BOOL:${MANIFOLD_PAR}>:TBB::tbb>
+  )
   target_compile_options(minimizeTestcase PRIVATE ${MANIFOLD_FLAGS})
-  target_compile_features(minimizeTestcase PUBLIC cxx_std_17)
+  exportbin(minimizeTestcase)
 endif()
 
 if(MANIFOLD_EXPORT)
   add_executable(convertFile convert_file.cpp)
   target_link_libraries(convertFile manifold manifold)
   target_compile_options(convertFile PRIVATE ${MANIFOLD_FLAGS})
-  target_compile_features(convertFile PUBLIC cxx_std_17)
+  exportbin(convertFile)
 endif()
