--- a/cmake/version.h.in
+++ b/cmake/version.h.in
@@ -17,3 +17,13 @@
 #define MANIFOLD_VERSION_MAJOR @MANIFOLD_VERSION_MAJOR@
 #define MANIFOLD_VERSION_MINOR @MANIFOLD_VERSION_MINOR@
 #define MANIFOLD_VERSION_PATCH @MANIFOLD_VERSION_PATCH@
+
+// Comparable version numbers to check version in code or preprocessing.
+// Check if your minimum requirements are met with e.g.
+//  MANIFOLD_VERSION > MANIFOLD_VERSION_NUMBER(2, 5, 1)
+#define MANIFOLD_VERSION_NUMBER(v_major, v_minor, v_patch) \
+  (((v_major) * 1000000) + ((v_minor) * 1000) + (v_patch))
+
+#define MANIFOLD_VERSION MANIFOLD_VERSION_NUMBER(MANIFOLD_VERSION_MAJOR, \
+                                                 MANIFOLD_VERSION_MINOR, \
+                                                 MANIFOLD_VERSION_PATCH)
