generate version.h for emscripten build (#1055)
* generate version.h for emscripten build

* fix

* typo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -217,6 +217,19 @@ add_subdirectory(extras)
 
 include(${PROJECT_SOURCE_DIR}/cmake/info.cmake)
 
+# note that the path ${CMAKE_CURRENT_BINARY_DIR}/include is included when we
+# build the manifold target (as ${PROJECT_SOURCE_DIR}/include), so users can
+# include manifold/version.h without installing our library.
+configure_file(
+  cmake/version.h.in
+  ${CMAKE_CURRENT_BINARY_DIR}/include/manifold/version.h
+  @ONLY
+)
+set_source_files_properties(
+  ${CMAKE_CURRENT_BINARY_DIR}/include/manifold/version.h
+  PROPERTIES GENERATED TRUE
+)
+
 # If it's an EMSCRIPTEN build, we're done
 if(EMSCRIPTEN)
   return()
@@ -265,26 +278,14 @@ set(
   $<$<BOOL:${MANIFOLD_EXPORT}>:meshIO.h>
 )
 list(TRANSFORM MANIFOLD_PUBLIC_HDRS PREPEND include/manifold/)
+list(
+  APPEND
+  MANIFOLD_PUBLIC_HDRS
+  ${CMAKE_CURRENT_BINARY_DIR}/include/manifold/version.h
+)
 
 install(
   FILES ${MANIFOLD_PUBLIC_HDRS}
-  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/manifold
-)
-
-# note that the path ${CMAKE_CURRENT_BINARY_DIR}/include is included when we
-# build the manifold target (as ${PROJECT_SOURCE_DIR}/include), so users can
-# include manifold/version.h without installing our library.
-configure_file(
-  cmake/version.h.in
-  ${CMAKE_CURRENT_BINARY_DIR}/include/manifold/version.h
-  @ONLY
-)
-set_source_files_properties(
-  ${CMAKE_CURRENT_BINARY_DIR}/include/manifold/version.h
-  PROPERTIES GENERATED TRUE
-)
-install(
-  FILES ${CMAKE_CURRENT_BINARY_DIR}/include/manifold/version.h
   DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/manifold
 )
 
