fix python SDist

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -211,9 +211,11 @@ include(${PROJECT_SOURCE_DIR}/cmake/configHelper.cmake)
 
 add_subdirectory(src)
 add_subdirectory(bindings)
-add_subdirectory(samples)
-add_subdirectory(test)
-add_subdirectory(extras)
+if(MANIFOLD_TEST)
+  add_subdirectory(samples)
+  add_subdirectory(test)
+  add_subdirectory(extras)
+endif()
 
 include(${PROJECT_SOURCE_DIR}/cmake/info.cmake)
 
