--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,9 +63,8 @@ before-all = "git clone --depth 1 --branch v2021.10.0 https://github.com/oneapi-
 "cmake.define.FETCHCONTENT_UPDATES_DISCONNECTED" = "ON"
 
 [tool.cibuildwheel.macos]
-archs = ["x86_64", "arm64"]
+archs = ["universal2"]
 environment = "MACOSX_DEPLOYMENT_TARGET=10.14"
-test-skip = "*-macosx_arm64 *-macosx_universal2:arm64"
 
 [tool.cibuildwheel.windows]
 before-build = "pip install delvewheel"
