--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -11,7 +11,9 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-22.04, windows-2019, macos-latest]
+        # macos-13: x86-64
+        # macos-14: arm64
+        os: [ubuntu-22.04, windows-2019, macos-14, macos-13]
     steps:
       - run: |
           git config --global submodule.fetchJobs 8
