--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,11 @@
 name: Deploy documentation 
 
 on:
-  push:
-    branches:
-      - master
+  workflow_run:
+    workflows: [CI]
+    types:
+      - completed
+    branches: [master]
 
 jobs:
   deploy_github_pages:
@@ -26,10 +28,14 @@ jobs:
       with:
         workflow: manifold.yml
         workflow_conclusion: completed
-        event: push
+        branch: maser
+        # specific to the triggering workflow
+        run_id: ${{github.event.workflow_run.id}}
+        # do not download from old run
+        check_artifacts: true 
         name: wasm
         path: ./public
-        
+
     - name: Deploy Javascript Docs to Github Pages
       run: |
         cd bindings/wasm
