--- a/.github/workflows/manifold.yml
+++ b/.github/workflows/manifold.yml
@@ -72,12 +72,14 @@ jobs:
         lcov --add-tracefile ./code_coverage_init.info --add-tracefile ./code_coverage_test.info --output-file ./code_coverage_total.info
         lcov --remove ./code_coverage_total.info '/usr/*' '*/test/*' '*/extras/*' '*/bindings/*' --output-file ./code_coverage.info
         cd ../
-    - uses: codecov/codecov-action@v4
+    - uses: codecov/codecov-action@v5
       if: matrix.parallelization == 'OFF'
       with:
         files: build/code_coverage.info
         fail_ci_if_error: false
         name: ${{matrix.parallelization}}
+        token: ${{secrets.CODECOV_TOKEN}}
+        verbose: true
     - name: test cmake consumer
       run: |
         cd build
