--- a/.github/workflows/manifold.yml
+++ b/.github/workflows/manifold.yml
@@ -67,14 +67,14 @@ jobs:
       run: |
         mkdir build
         cd build
-        cmake -DCMAKE_BUILD_TYPE=Release -DBUILD_SHARED_LIBS=ON -DMANIFOLD_PAR=${{matrix.parallelization}} -DCODE_COVERAGE=ON .. && make
+        cmake -DCMAKE_BUILD_TYPE=Release -DBUILD_SHARED_LIBS=ON -DMANIFOLD_CROSS_SECTION=${{matrix.cross_section}} -DMANIFOLD_PAR=${{matrix.parallelization}} -DCODE_COVERAGE=ON .. && make
         lcov --capture --gcov-tool gcov-${{ matrix.gcc }} --ignore-errors mismatch --initial --directory . --output-file ./code_coverage_init.info
         cd test
         ./manifold_test
         cd ../
         lcov --capture --gcov-tool gcov-${{ matrix.gcc }} --ignore-errors mismatch --directory . --output-file ./code_coverage_test.info
         lcov --add-tracefile ./code_coverage_init.info --add-tracefile ./code_coverage_test.info --output-file ./code_coverage_total.info
-        lcov --remove ./code_coverage_total.info "/usr/*"" "/*/test/*" "/*/extras/*" "/*/bindings/*" --output-file ./code_coverage.info
+        lcov --remove ./code_coverage_total.info "/usr/*" "/*/test/*" "/*/extras/*" "/*/bindings/*" "/*/include/*" --output-file ./code_coverage.info
         cd ../
     - uses: codecov/codecov-action@v5
       if: matrix.parallelization == 'OFF'
