--- a/.github/workflows/manifold.yml
+++ b/.github/workflows/manifold.yml
@@ -74,11 +74,12 @@ jobs:
         cd ../
         lcov --capture --gcov-tool gcov-${{ matrix.gcc }} --ignore-errors mismatch --directory . --output-file ./code_coverage_test.info
         lcov --add-tracefile ./code_coverage_init.info --add-tracefile ./code_coverage_test.info --output-file ./code_coverage_total.info
-        lcov --remove ./code_coverage_total.info "/usr/*" "/*/test/*" "/*/extras/*" "/*/bindings/*" "/*/include/*" --output-file ./code_coverage.info
+        lcov --extract ./code_coverage_total.info "/*/manifold/src/*" --output-file ./code_coverage.info
         cd ../
     - uses: codecov/codecov-action@v5
       if: matrix.parallelization == 'OFF'
       with:
+        disable_search: true
         files: build/code_coverage.info
         fail_ci_if_error: false
         name: ${{matrix.parallelization}}
