--- a/.github/workflows/manifold.yml
+++ b/.github/workflows/manifold.yml
@@ -115,6 +115,9 @@ jobs:
   build_wasm:
     timeout-minutes: 30
     runs-on: ubuntu-22.04
+    strategy:
+      matrix:
+        parallelization: [OFF, ON]
     steps:
     - name: Install dependencies
       run: |
@@ -126,15 +129,15 @@ jobs:
         # setup emscripten
         git clone https://github.com/emscripten-core/emsdk.git
         cd emsdk
-        ./emsdk install 3.1.61
-        ./emsdk activate 3.1.61
+        ./emsdk install 3.1.73
+        ./emsdk activate 3.1.73
     - uses: jwlawson/actions-setup-cmake@v2
-    - name: Build WASM
+    - name: Build WASM ${{matrix.parallelization}}
       run: |
         source ./emsdk/emsdk_env.sh
         mkdir build
         cd build
-        emcmake cmake -DCMAKE_BUILD_TYPE=Release .. && emmake make
+        emcmake cmake -DCMAKE_BUILD_TYPE=Release -DMANIFOLD_PAR=${{matrix.parallelization}} .. && emmake make
     - name: Test WASM
       run: |
         cd build/test
@@ -148,7 +151,7 @@ jobs:
         cp ../manifold.* ./dist/
     - name: Upload WASM files
       uses: actions/upload-artifact@v4
-      if: github.event_name == 'push'
+      if: github.event_name == 'push' && matrix.parallelization == 'OFF'
       with:
         name: wasm
         path: bindings/wasm/examples/dist/
