add manifold fuzz

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -69,4 +69,9 @@ if(MANIFOLD_FUZZ)
   target_link_libraries(polygon_fuzz PUBLIC manifold)
   link_fuzztest(polygon_fuzz)
   gtest_discover_tests(polygon_fuzz)
+
+  add_executable(manifold_fuzz manifold_fuzz.cpp)
+  target_link_libraries(manifold_fuzz PUBLIC manifold)
+  link_fuzztest(manifold_fuzz)
+  gtest_discover_tests(manifold_fuzz)
 endif()
