--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -34,3 +34,5 @@ target_include_directories(samples PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 target_link_libraries(samples PUBLIC manifold)
 
 target_compile_options(samples PRIVATE ${MANIFOLD_FLAGS})
+
+exportlib(samples)
